--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,28 +8,34 @@
       <div class="footer-col footer-col-1">
         <ul class="contact-list">
           <li class="name">{{ site.myname }}</li>
-          <li>{{ site.alias }}</li>
-          <li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
+          <!-- <li>{{ site.alias }}</li> -->
+          <li><a href="mailto:{{ site.email1 }}">{{ site.email1 }}</a></li>
+          <li><a href="mailto:{{ site.email2 }}">{{ site.email2 }}</a></li>
         </ul>
       </div>
 
       <div class="footer-col footer-col-2">
-        <p class="abode">Abode:</p>{{ site.address }}
+        <ul class="address">
+          <li class="name">Abode:</li>
+          <li>{{ site.address1 }}</li>
+          <li>{{ site.address2 }}</li>          
+        </ul>
       </div>
       
       <div class="footer-col footer-col-3">
         <ul class="social-media-list">
+          <li class="name">Profile Links:</li>
           {% if site.github_username %}
           <li>
             {% include icon-github.html username=site.github_username %}
           </li>
           {% endif %}
 
-          {% if site.facebook_username %}
+          <!-- {% if site.facebook_username %}
           <li>
             {% include icon-facebook.html username=site.facebook_username id=site.facebook_id %}
           </li>
-          {% endif %}
+          {% endif %} -->
 
           {% if site.linkedin_username %}
           <li>
