--- a/css/main.scss
+++ b/css/main.scss
@@ -4,6 +4,6 @@
 @import 
 	"base",
 	"layout",
-	"syntax-highlighting",
-	"github-buttons"
-	/*,"icons"  Commented because not in use currently. Uncomment if required later.*/
+	"syntax-highlighting"
+	/*"github-buttons" Commented because not in use currently. Uncomment if required later.*/
+	/*"icons"  Commented because not in use currently. Uncomment if required later.*/
