--- a/_includes/masthead.html
+++ b/_includes/masthead.html
@@ -1,7 +1,7 @@
 <div class="wrapper-masthead">
       <div class="container">
         <header class="masthead clearfix">
-          <a href="{{ site.baseurl }}/" class="site-avatar"><img src="{{ site.avatar }}" /></a>
+          <!-- <a href="{{ site.baseurl }}/" class="site-avatar"><img src="{{ site.avatar }}" /></a>
 
           <div class="site-info">
             <h1 class="site-name"><a href="{{ site.baseurl }}/">{{ site.myname }}</a></h1>
@@ -10,7 +10,7 @@
           
           <nav>
             {% include social.html %}
-          </nav>
+          </nav> -->
           
         </header>
       </div>
