--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@
 
 <body>
 	{% include header.html %}
-	{% include masthead.html %}
+	<!-- {% include masthead.html %} -->
 	<main>
 		<article>
 			{{ content }}
