--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -95,9 +95,9 @@ aside {
 					box-shadow: 0;
 					&:hover,
 					&:active {
-						background: $header;
+						//background: $header;
 						text-decoration: none;
-						color: $main;
+						//color: $main;
 					}
 				}
 			}
@@ -236,9 +236,9 @@ nav {
   box-shadow: 0;
   &:hover,
   &:active {
-    background: $header;
+    // background: $header;
     text-decoration: none;
-    color: $main;
+    // color: $main;
   }
 
   @include mobile {
@@ -282,6 +282,7 @@ nav {
 }
 
 .contact-list,
+.address,
 .social-media-list {
     list-style: none;
     margin-left: 0;
@@ -291,14 +292,6 @@ nav {
     color : $font-color;
     font-family : $georgia;
     }
-}
-
-.abode {
-    font-size: 20px;
-    color : $font-color;
-    font-family : $georgia;
-    margin-top: 10px;
-    margin-bottom: 0;
 }
 
 .footer-col-wrapper {
@@ -316,22 +309,18 @@ nav {
 }
 
 .footer-col-1 {
-    width: -webkit-calc(35% - (#{$spacing-unit} / 2));
-    width:         calc(35% - (#{$spacing-unit} / 2));
+    width: -webkit-calc(33% - (#{$spacing-unit} / 2));
+    width:         calc(33% - (#{$spacing-unit} / 2));
 }
 
 .footer-col-2 {
-    width: -webkit-calc(30% - (#{$spacing-unit} / 2));
-    width:         calc(30% - (#{$spacing-unit} / 2));
+    width: -webkit-calc(33% - (#{$spacing-unit} / 2));
+    width:         calc(33% - (#{$spacing-unit} / 2));
 }
 
-.footer-filler{
-    width: -webkit-calc(15% - (#{$spacing-unit} / 2));
-    width:         calc(15% - (#{$spacing-unit} / 2));
-}
 .footer-col-3 {
-    width: -webkit-calc(20% - (#{$spacing-unit} / 2));
-    width:         calc(20% - (#{$spacing-unit} / 2));
+    width: -webkit-calc(33% - (#{$spacing-unit} / 2));
+    width:         calc(33% - (#{$spacing-unit} / 2));
 }
 
 
@@ -534,7 +523,7 @@ nav {
   max-width:960px;
  }
 }
-button,input[type="button"],input[type="reset"],input[type="submit"],.button,.toggle-navbar-button {
+/* button,input[type="button"],input[type="reset"],input[type="submit"],.button,.toggle-navbar-button {
  appearance:none;
  background-color:#337ab7;
  border:0;
@@ -566,7 +555,7 @@ button.disabled,input.disabled[type="button"],input.disabled[type="reset"],input
 button.disabled:hover,input.disabled[type="button"]:hover,input.disabled[type="reset"]:hover,input.disabled[type="submit"]:hover,.disabled.button:hover,.disabled.toggle-navbar-button:hover,button.disabled:focus,input.disabled[type="button"]:focus,input.disabled[type="reset"]:focus,input.disabled[type="submit"]:focus,.disabled.button:focus,.disabled.toggle-navbar-button:focus,button:disabled:hover,input[type="button"]:disabled:hover,input[type="reset"]:disabled:hover,input[type="submit"]:disabled:hover,.button:disabled:hover,.toggle-navbar-button:disabled:hover,button:disabled:focus,input[type="button"]:disabled:focus,input[type="reset"]:disabled:focus,input[type="submit"]:disabled:focus,.button:disabled:focus,.toggle-navbar-button:disabled:focus {
  color:inherit;
  background:none transparent;
-}
+} */
 
 .button-ghost {
  background-color:transparent;
