--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>{{ site.title }} - {{ page.title }}</title>
+		<title>{{ site.alias }: {{ page.title }}</title>
 		<link rel="stylesheet" href="/assets/css/styles.css">
 	</head>
 	<body>
